Fixed timeline alignment issue

--- a/src/blocks/timeline/style.scss
+++ b/src/blocks/timeline/style.scss
@@ -1210,7 +1210,8 @@
 			.uagb-timeline__image a,
 			.uagb-timeline__heading,
 			.uagb-timeline-desc-content,
-			.uagb-timeline__date-inner {
+			.uagb-timeline__date-inner,
+			.uagb-timeline__inner-date-new {
 				text-align: left;
 			}
 
@@ -1458,7 +1459,8 @@
 			.uagb-timeline__image a,
 			.uagb-timeline__heading,
 			.uagb-timeline-desc-content,
-			.uagb-timeline__date-inner {
+			.uagb-timeline__date-inner,
+			.uagb-timeline__inner-date-new {
 				text-align: left;
 			}
 
